xong return, tke 70%